--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body align=center>
 		<img width=100px src="img/1.jpg">
 		<h1>Время приключений</h1>
-		<small>- Блог о приключениях -</small>
+		<small>- Блог о приключениях и не только-</small>
 		<br>
 		<br>
 		<br>
