--- a/index.html
+++ b/index.html
@@ -25,5 +25,9 @@
 		<p><b> На борт круизного лайнера нельзя проносить спиртное</b></p>
 		<p><b> Во время отдыха пройдет минимум одно мероприятие со строгим дресс-кодом.</b> </p>
 		<br>
+		<br>
+		<h2>Путешествие </h2>
+		<img width=350px src="img/4.jpg">
+		<br>
 	</body>
 </html>
